executable("exec") {
          sources = [
                "main.cpp",
                "webSocketClient.cpp",
                "CommandLineInterface.cpp",
                 "CommandLineInterface.h",
          ]
          libs = [
                "boost_system",
                "ssl",
                "crypto",
                "pthread",
          ]
}
